@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2002, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2002, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -31,7 +31,7 @@ public class isobsolete003b {
     static Integer foo(int i) {
         Integer j = null;
         try {
-            j = new Integer(new String(String.valueOf(i)));
+            j = Integer.valueOf(new String(String.valueOf(i)));
         } catch (NumberFormatException e) {
         }
         return j;
